align position header footer content correctly

--- a/front/static/css/base.css
+++ b/front/static/css/base.css
@@ -1,4 +1,4 @@
-body { margin:0; padding:0; }
+body { height:100%; margin:0; padding:0; }
 
 span._middle-in-box {
   display: inline-block;
@@ -6,61 +6,70 @@ span._middle-in-box {
   line-height: 100%; /* <-- adjust this */
 }
 
-#header-container {
+#wrap { }
+
+#header-container, #footer-container {
   background: #eee; 
   border: 1px solid #666; 
-  height: 60px; 
-  top: 0;
+  height: 60px;
   left: 0;
   right: 0;
-  position:absolute;
+  position: absolute;
   width: auto;
+  clear: both;
 }
 
-#header{ 
-  margin:0 auto;
+#header-container {
+  top: 0;
+}
+
+#header {
   text-align:center;
 }
 
-#footer-container {
-  background: #eee; 
-  border: 1px solid #666; 
-  height: 60px; 
+#header-container {
   bottom: 0;
-  left: 0;
-  right: 0;
-  position:absolute;
-  width: 100%;
 }
 
-#footer{ 
-  margin:0 auto;
+#footer{
   text-align:center;
 }
 
 div.container {
-  position: absolute;
-  top: 60px; /* Header Height */
-  bottom: 60px; /* Footer Height */
+  position: relative;
+  margin-top: 60px; /* Header Height */
   width: 100%;
-  border: 1px solid #666; 
+  border: 1px solid #666;
 }
 
 div.content {
   display: inline-block;
   width: 350px;
-  height: 90%;
+  height: 400px;
   border: 2px solid;
-  margin-top: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 20px;
   padding: 10px 10px 10px 10px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  white-space: normal;
 }
 
 div.content-wrapper {
   white-space: nowrap;
   width: 100%;
-  height: 100%;
-  overflow: auto;
+  overflow-x: auto;
   overflow-y: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.break-word {
+  display: inline-block;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: normal;
+  line-break: strict;
+  hyphens: none;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
 }
